Changes to thrift getTables call to align with jdbc standard (#396)
* changes to thrift get tables call

* fmt